@@ -21,5 +21,8 @@ Changes
 Fixes
 =====
 
+ - Fixed a ClassCastException that could occur on certain queries if connected
+   via the postgres protocol.
+
  - Fixed an issue that could cause the ``_score >= <minScore>`` filter to not
    work correctly if used in a query with an ``ORDER BY`` clause.
